Fixes a bug with firefox causing number guess and poll range label to collapse on right side

--- a/styles_src/numberGuess.scss
+++ b/styles_src/numberGuess.scss
@@ -128,6 +128,6 @@ $q-quiz-result__number-guess-visual__stats-graphic-height: 60px;
 }
 
 .q-quiz-input-range-position-label {
-  width: fit-content;
+  width: max-content;
   max-width: 200px;
 }
